--- a/public/posts/cdn-static-content-delivery.mdx
+++ b/public/posts/cdn-static-content-delivery.mdx
@@ -47,7 +47,7 @@ I produce a final *index.html* file and use cache busting timestamps for JS and 
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
-        <base href='/spa/' />
+        <base href='/spa/'>
         <title>OAuth Demo App</title>
 
         <link rel='stylesheet' href='bootstrap.min.css?t=1650271813125' integrity='sha256-YvdLHPgkqJ8DVUxjjnGVlMMJtNimJ6dYkowFFvp4kKs='>
