--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -79,10 +79,10 @@ certs/authsamples-dev.ca.crt
 
 ### Step 4: Run the SPA
 
-Open a terminal and run the following commands from the root folder, to build and run the code:
+Open a terminal and run the following command from the root folder, to build and run the code:
 
 ```bash
-./build.sh && ./run.sh
+./start.sh
 ```
 
 The [Webpack development server](https://webpack.js.org/configuration/dev-server/) serves static content in watch mode. The default browser then opens at *https://www.authsamples-dev.com*.
