--- a/public/posts/spa-back-end-for-front-end.mdx
+++ b/public/posts/spa-back-end-for-front-end.mdx
@@ -18,7 +18,7 @@ At a higher level, there were three main requirements I wanted to meet for this 
 | Globally Equal Performance | Deploy the SPA to a content delivery network, so that web latency is roughly the same at any global location. |
 | Pure SPA Development | Web developers work productively on modern frontends, with small code bases, usability control and no backend plumbing. |
 
-The cookie requirement is an awkward one for SPAs. When developing SPAs and APIs you should not need to return to older website technology stacks. The key technique to maintain an SPA architecture and meet all three requirements is to use API-driven cookie issuing,
+The cookie requirement is an awkward one for SPAs. When developing SPAs that call APIs you should maintain a <a href='web-technology-setup.mdx'>Modern Web Technology Setup</a> and should not need to return to older website technology stacks. The key technique to maintain an SPA architecture and meet all three requirements is to use API-driven cookie issuing,
 
 ### This Blog's Backend for Frontend
 
