--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -91,7 +91,7 @@ Earlier SPAs in this blog used hash-based routing. The final SPA instead uses Re
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 
-        <base href='/spa/' />
+        <base href='/spa/'>
         <title>OAuth Demo App</title>
 
         <link rel='stylesheet' href='bootstrap.min.css'>
